eeepc-acpi-scripts (1.1.4) UNRELEASED; urgency=low

  * rules: when stripping comments from /etc/default/eeepc-acpi-scripts, also
    remove lines consisting solely of '#'

 -- Damyan Ivanov <dmn@debian.org>  Wed, 16 Dec 2009 21:34:59 +0200

eeepc-acpi-scripts (1.1.3) unstable; urgency=low

  [ Darren Salt ]
  * Init script fixups for when /etc/default/eeepc-acpi-scripts is missing;
    ensure that we default to "automatic" for our S.H.E. handling. 
  * Belatedly bump acpid version requirement. (Closes: #550119)
  * Bring the copyright file up to date.
  * Allow setting of whether the super hybrid engine control defaults to
    manual or auto.
  * Strip out comments from /etc/default/eeepc-acpi-scripts and store a
    fully-commented copy in /usr/share/doc/eeepc-acpi-scripts/examples/.
  * Add configuration support for Fn-F4 on 10" models. No action is defined.
  * Make VGA toggling into a bindable function.
  * Fix a bug which prevented touchpad toggling from working properly.

  [ Damyan Ivanov ]
  * rules: call dh_installinit with -u'start 20 S .' to prevent
    installing stop init.d symlinks as eeepc-acpi-scripts init.d script
    doesn't need to be run during system shutdown
  * postinst: remove and re-install rc.d configuration
    fixing insserv warning about discrepancy between LSB init.d headers and
    the real situation. Thanks to Paul Menzel for reporting and Raphael
    Geissert for the fix.
  * hotkey.sh/wireless.sh/functions.sh: wake up wicd on switching WiFi on
  * Standards-Version: 3.8.3 (no changes necessary)

  [ Andreas Schreiner ]
  * Fix WLAN toggle using fn-F2 on EeePC 900A. This EeePC model needs to
    load the pciehp kernel module with the pciehp_force=1 option up to kernel
    version 2.6.32. /etc/init.d/eeepc-acpi-script now checks if it is running
    on a 900A and loads the module accordingly.

 -- Damyan Ivanov <dmn@debian.org>  Thu, 03 Dec 2009 20:53:05 +0200

eeepc-acpi-scripts (1.1.2) unstable; urgency=low

  [ Darren Salt ]